Fix navigation on mobile/smaller screens

--- a/rails/app/assets/stylesheets/admin/_admin.scss
+++ b/rails/app/assets/stylesheets/admin/_admin.scss
@@ -5,8 +5,8 @@ $default-vertical-padding: 1rem;
 // @import 'story_dashboard';
 @import 'card';
 @import 'badge';
-@import 'navigation_style';
-@import 'main_content_style';
+@import 'navigation';
+@import 'main_content';
 
 html {
   background-color: white; // override administrate
@@ -27,10 +27,20 @@ html {
   justify-content: space-between;
   border-bottom: 5px solid $orange;
 
+  @include for-phone-only {
+    margin-top: 1rem;
+    flex-direction: column;
+  }
+
   h1 {
     font-size: 2rem;
     line-height: 2.2rem;
     margin-left: 1rem;
+
+    @include for-phone-only {
+      margin-left: 0;
+    }
+
     a {
       text-decoration: none;
       color: currentColor;
@@ -38,9 +48,9 @@ html {
   }
 }
 
-// .import-spinner {
-//   display: none !important;
-// }
+.import-spinner {
+  display: none !important;
+}
 
 // button.btn-import:disabled {
 //   background-color: $orange !important;
